chore: update GitHub Actions workflow to include authentication settings and modify database initialization

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,6 +25,8 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
+          --auth-host=md5
+          --auth-local=md5
 
     steps:
       - name: Checkout code
@@ -40,7 +42,7 @@ jobs:
 
       - name: Initialize database schema
         run: |
-          psql -h localhost -p 5432 -U testuser -d testdb <<EOF
+          PGPASSWORD=testpassword psql -h localhost -p 5432 -U testuser -d testdb <<EOF
           CREATE TABLE IF NOT EXISTS personal_budget (
               id SERIAL PRIMARY KEY,
               name TEXT NOT NULL,
@@ -48,6 +50,7 @@ jobs:
               created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
           );
           EOF
+
 
       - name: Export DATABASE_URL
         run: echo "DATABASE_URL=postgres://testuser:testpassword@localhost:5432/testdb" >> $GITHUB_ENV
