--- a/k8s/postgresql/postgres-instance.yaml
+++ b/k8s/postgresql/postgres-instance.yaml
@@ -2,12 +2,10 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: personal-budget-db-cluster
+  namespace: cnpg-system
 spec:
   instances: 1
   imageName: ghcr.io/cloudnative-pg/postgresql:16.1
-
-
-
   bootstrap:
     initdb:
       database: personal_budget_user
