--- a/k8s/postgresql/secret.yaml
+++ b/k8s/postgresql/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: personal-budget-user-secret
+  namespace: cnpg-system
 type: kubernetes.io/basic-auth
 data:
 # temporary solution
